<resources>
    <string name="app_name">Admission Help Desk</string>
    <string name="start">Open</string>
    <string name="close">Close</string>
    <string name="first"><b>Privacy Policy for Admission Help Desk</b> \n\n At Admission Help Desk, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Admission Help Desk and how we use it. \n\n If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</string>
    <string name="second"><b>Log Files</b> \n\nAdmission Help Desk follows a standard procedure of using log files. These files log visitors when they use app. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the app, tracking users\' movement on the app, and gathering demographic information.</string>
    <string name="third"><b>Our Advertising Partners</b> \n\nSome of advertisers in our app may use cookies and web beacons. Our advertising partners are listed below. Each of our advertising partners has their own Privacy Policy for their policies on user data. For easier access, we hyperlinked to their Privacy Policies below.</string>
    <string name="fourth"><b>Privacy Policies</b> \n\nYou may consult this list to find the Privacy Policy for each of the advertising partners of Admission Help Desk. Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Beacons that are used in their respective advertisements and links that appear on Admission Help Desk. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on this app or other apps or websites. Note that Admission Help Desk has no access to or control over these cookies that are used by third-party advertisers.</string>
    <string name="fifth"><b>Third Party Privacy Policies</b> \n\nAdmission Help Desk\'s Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options.</string>
</resources>